--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="build/css/normalize.css">
     <link rel="stylesheet" href="build/css/app.css">
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet'/>
-    <title>Document</title>
+    <title>Casos covid</title>
 </head>
 <body>
     <div class="contenedor-todo">
@@ -41,6 +41,6 @@
     
     
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
-    <script src="build/js/bundle.js"></script>
+    <script src="build/js/app.js"></script>
 </body>
 </html>
